--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "lodash": "^4.17.4",
+    "normalizr": "^3.2.3",
+    "vuedraggable": "^2.13.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
