--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "normalizr": "^3.2.3",
     "vue": "^2.3.3",
+    "vue-strap": "github:wffranco/vue-strap",
     "vuedraggable": "^2.13.1",
     "vuex": "^2.3.1"
   },
